# monorepo-alpha

./: .gitignore  MODULE.bazel  README.md  principles.md
.github/workflows/: abacus-base-images.yaml  bazel-test.yaml  terraform-fmt-check.yml
abacus/: README.md  tech-stack.md
abacus/genesis/: .terraform.lock.hcl  BUILD.bazel  README.md  aws-iam-auth-for-terraform-cloud.tf  ci-cd-plan.md  genesis-repo-tags.txt  genesis-test.yaml  main.tf  terraform-cloud-setup.tf  terraform-cloud-setup.tf.tf  terraform-cloud.tf  terraform.tfstate  variables.tf
abacus/genesis/aws/: auth-for-hcp-terraform.tf  main.tf
abacus/genesis/terraform-cloud/: main.tf
oci-images/: README.md
oci-images/image-specs/: collect_image_directories.py
oci-images/image-specs/genesis-base/: Dockerfile  debug.Dockerfile
terraform/: BUILD.bazel
