load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_oci//oci:defs.bzl", "oci_tarball")
load("@rules_pkg//pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name="source_code_tar",
    srcs=[
        "main.tf",
        "variables.tf",
        "outputs.tf",
    ],
    package_dir="/genesis",
)

oci_image(
    name="terraform_layer",
    base="@ubuntu_base",
    tars=["//terraform:terraform_tar"],
)

oci_image(
    name="source_code_layer",
    base=":terraform_layer",
    tars=[":source_code_tar"],
)

oci_tarball(
    name="genesis",
    image=":source_code_layer",
    repo_tags="genesis-repo-tags.txt",
)
