load("@container_structure_test//:defs.bzl", "container_structure_test")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_oci//oci:defs.bzl", "oci_load")
load("@rules_pkg//pkg:pkg.bzl", "pkg_tar")

user_and_group_1000 = "1000:1000"
oci_image(
    name="terraform_layer",
    base="@genesis_base_latest",
    tars=["//terraform:terraform_tar"],
    user=user_and_group_1000,
)
pkg_tar(
    name="source_code_tar",
    package_dir="/genesis",
    srcs=[
        "main.tf",
        "variables.tf",
        "outputs.tf",
    ],
)
oci_image(
    name="source_code_layer",
    base=":terraform_layer",
    tars=[":source_code_tar"],
    user=user_and_group_1000,
)
container_structure_test(
    name="source_code_layer_test",
    configs=["genesis-test.yaml"],
    image=":source_code_layer",
)
oci_load(
    name="genesis_image",
    image=":source_code_layer",
    repo_tags=["public.ecr.aws/b1l7c9m5/genesis:latest"],
)
